updated file paths to css and js files

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="resources/css/index.css" rel="stylesheet" type="text/css" />
     <link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
   </head>
   <body>
   <script src="https://code.jquery.com/jquery-3.2.1.js"
   integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
   crossorigin="anonymous"></script>
-  <script src="index.js"></script>
+  <script src="resources/js/index.js"></script>
     
     
     <br/>
